k8s/infra/vpn/netbird/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
