k8s/infra/vpn/netbird/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: netbird
spec:
  parentRefs:
    - { name: external, namespace: gateway }
    - { name: internal, namespace: gateway }
  hostnames: [ "netbird.stonegarden.dev" ]
  rules:
    - backendRefs: [ { name: dashboard, port: 80 } ]
      matches: [ { path: { type: PathPrefix, value: / } } ]
    - backendRefs: [ { name: relay, port: 80 } ]
      matches: [ { path: { type: PathPrefix, value: /relay } } ]
    - backendRefs: [ { name: management, port: 80 } ]
      matches: [ { path: { type: PathPrefix, value: /api } } ]
