k8s/infra/vpn/netbird/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
  name: netbird
  namespace: netbird
spec:
  tls:
    - secretName: netbird-ingress-tls
      hosts:
        - netbird.stonegarden.dev
  rules:
    - host: netbird.stonegarden.dev
      http:
        paths:
          - backend:
              service:
                name: netbird-backend-management
                port:
                  number: 80
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: netbird-backend-management
                port:
                  number: 80
            path: /management.ManagementService/
            pathType: Prefix
    - host: netbird.stonegarden.dev
      http:
        paths:
          - backend:
              service:
                name: netbird-backend-signal
                port:
                  number: 80
            path: /signalexchange.SignalExchange/
            pathType: Prefix
    - host: netbird.stonegarden.dev
      http:
        paths:
          - backend:
              service:
                name: netbird-dashboard
                port:
                  number: 80
            path: /
            pathType: Prefix
